[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/confirmation_menu.gd" type="Script" id=1]
[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=2]

[node name="Confirmation_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="window" type="NinePatchRect" parent="."]
margin_left = 168.0
margin_top = 108.0
margin_right = 312.0
margin_bottom = 174.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="label" type="Label" parent="window"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 32.0
size_flags_vertical = 3
text = "Are You Sure?"
align = 1
valign = 1

[node name="container" type="HBoxContainer" parent="window"]
margin_left = 8.0
margin_top = 38.0
margin_right = 136.0
margin_bottom = 60.0

[node name="yes" type="Button" parent="window/container"]
margin_right = 62.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../no")
focus_neighbour_right = NodePath("../no")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Yes"
flat = true

[node name="no" type="Button" parent="window/container"]
margin_left = 66.0
margin_right = 128.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../yes")
focus_neighbour_right = NodePath("../yes")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "No"
flat = true

[connection signal="pressed" from="window/container/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="window/container/no" to="." method="_on_no_pressed"]
